--- a/company/company01.html
+++ b/company/company01.html
@@ -108,10 +108,10 @@
         <img src="/img/company/img0101.gif" class="rounded mx-auto d-block" alt="..." style="margin: 40px 0;"><br>
       </div>
     </div>
-
+    <div id="con-c">
     <div class="row" id="con">
       <div class="col">
-        <img src="/img/company/img0102.jpg" width="100%">
+        <img src="/img/company/img0102.jpg" style="width: 100%;">
       </div>
       <div class="col">
           <h5>파이브스톤은 끊임없는 열정으로<br>
@@ -127,6 +127,7 @@
             · 대 표 : 김성용</p>
       </div>
     </div>
+    </div>
 
 
   </div>
@@ -140,28 +141,28 @@
 
     <div class="d-flex justify-content-center">
 
-    <div class="card" style="width: 25%; height: 250px;">
+    <div class="card" style="width: 25%; min-height: 250px;">
       <img src="/img/company/img0103.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CREATIVE</h5>
         <p class="card-text">파이브스톤은 창조적인 디자인으로 고객과 함께합니다.</p>
       </div>
     </div>
-    <div class="card" style="width: 25%; height: 250px;">
+    <div class="card" style="width: 25%; min-height: 250px;">
       <img src="/img/company/img0104.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CONFIDENCE</h5>
         <p class="card-text">파이브스톤은 고객과의 신뢰를 최우선으로 생각합니다.</p>
       </div>
     </div>
-    <div class="card"style="width: 25%; height: 250px;">
+    <div class="card"style="width: 25%; min-height: 250px;">
       <img src="/img/company/img0105.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PARTNERSHIP</h5>
         <p class="card-text">파이브스톤은 고객과의 협력을 통해 파트너쉽을 쌓아갑니다.</p>
       </div>
     </div>
-    <div class="card" style="width: 25%; height: 250px;">
+    <div class="card" style="width: 25%; min-height: 250px;">
       <img src="/img/company/img0106.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PASSION</h5>
