--- a/customer/customer03.html
+++ b/customer/customer03.html
@@ -19,9 +19,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
     function searchbutton () {
       alert ("검색어를 정확히 입력하세요.")
