--- a/main.html
+++ b/main.html
@@ -139,7 +139,7 @@
 <div class="section4-1">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="img/m-mb04.jpg" alt=""></a></div>
+    <a href=""> <img src="../img/m-mb04.jpg" alt=""></a></div>
     <p class="busititle">사업분야04</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -150,7 +150,7 @@
 <!-- 섹션5 -->
 <div id="section5">
   <div id="section5-1">
-  <img src="img/visual04.jpg" alt="">
+  <img src="../img/visual04.jpg" alt="">
   <h1>정직과 신뢰, 디자인</h1>
   <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
   <button type="button" class="btn btn-outline-secondary" id="learn" >Learn more</button>
